<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/general_settings">
        <com.jenzz.materialpreference.SwitchPreference
            android:key="@string/right_hand_mode_key"
            android:summary="@string/right_hand_mode_summary"
            android:title="@string/right_hand_mode" />

        <com.jenzz.materialpreference.Preference
            android:key="@string/clear_cache_data_key"
            android:title="@string/clear_cache_data" />

    </com.jenzz.materialpreference.PreferenceCategory>

    <com.jenzz.materialpreference.PreferenceCategory android:title="@string/other">
        <com.jenzz.materialpreference.Preference
            android:key="@string/advice_feedback_key"
            android:title="@string/advice_feedback" />
    </com.jenzz.materialpreference.PreferenceCategory>
</PreferenceScreen>